Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97853

Tablewidget_cellClicked not working after opening Dialog with cellDoubleClicked

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.15.8, 6.3.0 Alpha
    • 6.1.3, 6.2.1
    • None
    • MinGW 8.1.0 64 Bit
      Windows 11 Pro 10.0.22000 Build 22000
      Qt 6.2.1
    • Windows
    • e5ebc28764979f00f1ce3aeb8b2d44b5cadb93c5 (qt/qtbase/dev) fa078bf6446d10e68381aa6200290b2923e9baa0 (qt/tqtc-qtbase/5.15) 13117d44950afc6c7d1ef342d86bac55b99137b8 (qt/qtbase/6.2)

      After switching to Qt Version 6.2.1 MinGW 64 Bit, I experienced a strange behaviour: Every time I open a Dialog with QTableWidget's Signal "cellDoubleClicked(int row, int column)" and afterwards closing this (empty) dialog, I wasnt able to trigger a Signal "cellClicked(int row, int column)" when clicking on the same Cell once again.
      The Cell was working again after I clicked a second time on it, but the first time after closing the dialog it doesn't worked.

      After compiling with Qt 6.0.4 everything was working fine.

      Edit: I tested Version 6.1.3 MinGW 64 too - same problem there. Version 6.0.4 is working fine.

       

      Here is my test code: (got the Test-Project as attachment)

      void MainWindow::on_tableWidget_cellClicked(int row, int column)
      {
      	Q_UNUSED(row);
      	Q_UNUSED(column);
      
      	qDebug() << "cell clicked";
      }
      
      void MainWindow::on_tableWidget_cellDoubleClicked(int row, int column)
      {
      	Q_UNUSED(row);
      	Q_UNUSED(column);
      
      	Dialog dialog;
      	dialog.exec();
      }
      
      
      void MainWindow::on_open_dialog_button_clicked()
      {
      	Dialog dialog;
      	dialog.exec();
      }
      
      
      void MainWindow::on_fill_table_button_clicked()
      {
      	//LOADING TABLE
      	ui->tableWidget->clear();
      	ui->tableWidget->setRowCount(1);
      	ui->tableWidget->setColumnCount(1);
      
      	ui->tableWidget->setItem(0, 0, new QTableWidgetItem("Table Item Text"));
      	ui->tableWidget->setEditTriggers(QTableWidget::NoEditTriggers);
      }
      

       

      Feel free to ask  - I'm not able to solve this issue by myself. As I know, there was a change in Version 6.2.1 in the QItemSelectionModel (Release notes: QTBUG-97475 Crash in QItemSelectionModel) - maybe the issu is located there?

        For Gerrit Dashboard: QTBUG-97853
        # Subject Branch Project Status CR V

            vhilshei Volker Hilsheimer
            qtguy07 Martin Heini
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes